rm buggy react wrap balancer

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next": "latest",
     "react": "latest",
     "react-cookie": "^4.1.1",
-    "react-dom": "latest",
-    "react-wrap-balancer": "^0.1.5"
+    "react-dom": "latest"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
